--- a/index.html
+++ b/index.html
@@ -87,32 +87,34 @@
                 <section class="recent-works">
                     <h3> Recent works</h3>
                     <div class="recent-works-background"></div>
-                    <div class="recent-works-content">
-                        <img src="img/recentwork1.jpg" height="183" width="220" alt="Recent Work">
-                        <div class="recent-works-text">
-                            <h4>Character design</h4>
-                            <p>June 15, 2012</p>
+                    <div class="recent-works-container">
+                        <div class="recent-works-content">
+                            <img src="img/recentwork1.jpg" height="183" width="220" alt="Recent Work">
+                            <div class="recent-works-text">
+                                <h4>Character design</h4>
+                                <p>June 15, 2012</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="recent-works-content">
-                        <img src="img/recentwork2.jpg" height="183" width="220" alt="Recent Work">
-                        <div class="recent-works-text">
-                            <h4>Bronchure design</h4>
-                            <p>June 15, 2012</p>
+                        <div class="recent-works-content">
+                            <img src="img/recentwork2.jpg" height="183" width="220" alt="Recent Work">
+                            <div class="recent-works-text">
+                                <h4>Bronchure design</h4>
+                                <p>June 15, 2012</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="recent-works-content">
-                        <img src="img/recentwork3.jpg" height="183" width="220" alt="Recent Work">
-                        <div class="recent-works-text">
-                            <h4>Social media buttons</h4>
-                            <p>June 15, 2012</p>
+                        <div class="recent-works-content">
+                            <img src="img/recentwork3.jpg" height="183" width="220" alt="Recent Work">
+                            <div class="recent-works-text">
+                                <h4>Social media buttons</h4>
+                                <p>June 15, 2012</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="recent-works-content">
-                        <img src="img/recentwork4.jpg" height="183" width="220" alt="Recent Work">
-                        <div class="recent-works-text">
-                            <h4>10 amazing websites</h4>
-                            <p>June 15, 2012</p>
+                        <div class="recent-works-content">
+                            <img src="img/recentwork4.jpg" height="183" width="220" alt="Recent Work">
+                            <div class="recent-works-text">
+                                <h4>10 amazing websites</h4>
+                                <p>June 15, 2012</p>
+                            </div>
                         </div>
                     </div>
                 </section>
