--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <a href="">
                         <img class="sliderright" src="img/sliderright.gif" height="60" width="80" alt="Arrow right">
                     </a>
+                    <div class="slide-show-text">
+                        <h2>Slide one</h2>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendnt ea vel. Urbanitas adolescens vim te, per at tritiani aperiri. Adhuc invenire convenire his ea.</p>
+                    </div>
                 </section>
 
                 <section class="thumb">
