site af (niet responsive)

--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
                <nav>
                    <ul>
                        <li><a href="index.html">Home</a></li>
-                       <li><a class="active" href="about-us.html">About us</a></li>
-                       <li><a href="blog.html">Blog</a></li>
+                       <li><a href="about-us.html">About us</a></li>
+                       <li><a class="active" href="blog.html">Blog</a></li>
                        <li><a href="portfolio.html">Portfolio</a></li>
                        <li><a href="contact.html">Contact Us</a></li>
                    </ul>
@@ -31,13 +31,97 @@
         </div>
 
         <main>
-            <div class="container">
+            <div class="container clearfix">
                 <div class="page-title">
                     <h2>Blog</h2>
                 </div>
                 <section class="contents">
-                    <div class="apps">
+                    <div class="blogpost">
+                        <img class="iconblog" src="img/iconblog1.jpg" height="75" width="75" alt="Icon-pic">
                         <img src="img/blog1.jpg" height="300" width="670" alt="Wordpress Themes of 2012">
+                        <div class="information">
+                            <div class="info">
+                                <h5>Date</h5>
+                                <p>April 15, 2012</p>
+                                <h5>Tags</h5>
+                                <p>Website | Design</p>
+                                <h5>Comments</h5>
+                                <p>4</p>
+                            </div>
+                            <div class="explain">
+                                <h3>Top wordpress themes of 2012</h3>
+                                <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.</p>
+                                <p>Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis  ...</p>
+                            </div>
+                            <div class="border-bottom"></div>
+                        </div>
+                    </div>
+                    <div class="blogpost">
+                        <img class="iconblog" src="img/iconblog2.jpg" height="75" width="75" alt="Icon-pic">
+                        <img src="img/blog2.jpg" height="300" width="670" alt="Wordpress Themes of 2012">
+                        <div class="information">
+                            <div class="info">
+                                <h5>Date</h5>
+                                <p>April 15, 2012</p>
+                                <h5>Tags</h5>
+                                <p>Website | Design</p>
+                                <h5>Comments</h5>
+                                <p>4</p>
+                            </div>
+                            <div class="explain">
+                                <h3>Jesus  Typography  Wallpaper  Giveaway!</h3>
+                                <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.</p>
+                                <p>Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis  ...</p>
+                            </div>
+                            <div class="border-bottom"></div>
+                        </div>
+                    </div>
+                    <div class="blogpost">
+                        <img class="iconblog" src="img/iconblog3.jpg" height="75" width="75" alt="Icon-pic">
+                        <img src="img/blog3.jpg" height="300" width="670" alt="Wordpress Themes of 2012">
+                        <div class="information">
+                            <div class="info">
+                                <h5>Date</h5>
+                                <p>April 15, 2012</p>
+                                <h5>Tags</h5>
+                                <p>Website | Design</p>
+                                <h5>Comments</h5>
+                                <p>4</p>
+                            </div>
+                            <div class="explain">
+                                <h3>Big  Buck  Bunny  Trailer</h3>
+                                <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.</p>
+                                <p>Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis  ...</p>
+                            </div>
+                            <div class="border-bottom"></div>
+                        </div>
+                    </div>
+                    <div class="blogpost">
+                        <img class="iconblog" src="img/iconblog4.jpg" height="75" width="75" alt="Icon-pic">
+                        <div class="information">
+                            <div class="quote">
+                               <p><span>&ldquo;</span>Write anything you want here in this quotable area. Something unique you want people to learn about your website or some cool random fact. Its totally up to you. </p> 
+                            </div>
+                            <div class="border-bottom"></div>
+                        </div>
+                    </div>
+                    <div class="blogpost">
+                        <img class="iconblog" src="img/iconblog5.jpg" height="75" width="75" alt="Icon-pic">
+                        <div class="information">
+                            <div class="explain">
+                                <h3 class="last-h3">Some of the best free</h3>
+                                <a href="">www.bestpsdfreebies.com</a>
+                                <p class="last-p">Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei.</p>
+                            </div>
+                            <div class="border-bottom"></div>
+                        </div>
+                    </div>
+                    <div class="nav-blog">
+                        <ul>
+                            <li><a class="active" href="">1</a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                        </ul>
                     </div>
                 </section>
                 <aside>
@@ -91,7 +175,7 @@
                                 <p>Follow <a href="">@bestpsdfreebies</a></p>
                             </div>
                             <div class="col-3">
-                                <h2>About Jetro</h2>
+                                <h2>Contact Us</h2>
                                 <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri.</p> 
                                 <p>information@jetro.com</p>
                                 <p class="contact-text">1.222.333.4444</p>
