--- a/slider-plugin.html
+++ b/slider-plugin.html
@@ -20,10 +20,10 @@
                <h1>Jet<span>ro</span></h1>
                <nav>
                    <ul>
-                       <li><a class="active" href="index.html">Home</a></li>
+                       <li><a href="index.html">Home</a></li>
                        <li><a href="about-us.html">About us</a></li>
                        <li><a href="blog.html">Blog</a></li>
-                       <li><a href="portfolio.html">Portfolio</a></li>
+                       <li><a class="active" href="portfolio.html">Portfolio</a></li>
                        <li><a href="contact.html">Contact Us</a></li>
                    </ul>
                </nav>
@@ -32,64 +32,16 @@
 
         <main>
             <div class="container clearfix">
-                <section class="slide-show">
-                    <a href="">
-                        <img class="sliderleft" src="img/sliderleft.gif" height="60" width="80" alt="Arrow left">
-                    </a>
-                    <a href="">
-                        <img class="sliderright" src="img/sliderright.gif" height="60" width="80" alt="Arrow right">
-                    </a>
-                    <div class="slide-show-text">
-                        <h2>Slide one</h2>
-                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendnt ea vel. Urbanitas adolescens vim te, per at tritiani aperiri. Adhuc invenire convenire his ea.</p>
-                    </div>
+                <div class="page-title">
+                    <h2>Slider &nbsp; plugin</h2>
+                </div>
+                <section class="portfolio-page">
+                    <img src="img/portfolioItem.jpg" height="401" width="940" alt="Slider Plugin">
+                    <p>Praesent in dictum est. Fusce scelerisque nibh in sem rhoncus semper. Sed nisi risus, adipiscing eu mollis luctus, elementum at lacus. Suspendisse porta, eros eu fermentum molestie, purus erat hendrerit tellus, sodales rhoncus justo sapien in lacus. Morbi tincidunt lorem vitae turpis molestie lacinia. Vivamus nec nulla turpis. Ut placerat lacus aliquet ipsum lobortis vitae varius felis ullamcorper. Maecenas pharetra imperdiet dolor eu pulvinar.</p>
+                    <p>Nullam justo quam, tristique sit amet facilisis non, commodo vel nunc. In quam libero, pulvinar et scelerisque vitae, molestie euismod justo. Donec tortor magna, vehicula in facilisis sit amet, ultricies nec massa. Curabitur at tincidunt sem. Mauris nulla justo, ornare in condimentum non, eleifend at nibh. Nullam mattis faucibus odio, sit amet aliquam urna lobortis sit amet. Aliquam mauris elit, consectetur vestibulum tincidunt vitae, sodales vel libero. Phasellus malesuada, metus vitae lobortis sodales, diam lacus lacinia metus, id sodales ante urna in urna. Duis elementum luctus mi, et euismod leo aliquet at. Proin justo est, elementum in posuere ac, pharetra non ipsum. Phasellus sit amet nisi quis lacus hendrerit elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum enim ut sapien pellentesque lacinia. Aliquam fringilla sem eget sem pulvinar egestas. Duis congue lorem id mi scelerisque gravida. Ut in lacus libero. </p>
                 </section>
-
-                <section class="thumb">
-                    <div class="grid">
-                        <div class="col-2 col-sm-3">
-                            <img src="img/thumbnail1.jpg" height="120" width="140" alt="Thumb Naill">
-                        </div>
-                        <div class="col-2 col-sm-3">
-                            <img src="img/thumbnail2.jpg" height="120" width="140" alt="Thumb Naill">
-                        </div>
-                        <div class="col-2 col-sm-3">
-                            <img src="img/thumbnail3.jpg" height="120" width="140" alt="Thumb Naill">
-                        </div>
-                        <div class="col-2 col-sm-3">
-                            <img src="img/thumbnail4.jpg" height="120" width="140" alt="Thumb Naill">
-                        </div>
-                        <div class="col-2 col-sm-3">
-                            <img src="img/thumbnail5.jpg" height="120" width="140" alt="Thumb Naill">
-                        </div>
-                        <div class="col-2 col-sm-3">
-                            <img src="img/thumbnail6.jpg" height="120" width="140" alt="Thumb Naill">
-                        </div>
-                    </div>
-                </section>
-
-                <section class="blog">
-                    <div class="div-blog">
-                        <img src="img/icon1.gif" height="50" width="50" alt="Portfolio">
-                        <h3> Check out my latest portfolio items</h3>
-                        <p>Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posue re ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis. Aenean sodales nibh non lectus tempor a interdum justo ultricies.</p>
-                        <a href="">More</a>
-                    </div>
-                    <div class="div-blog">
-                        <img src="img/icon2.gif" height="50" width="50" alt="Portfolio">
-                        <h3> Offer top notch quality work & services</h3>
-                        <p>Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posue re ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis. Aenean sodales nibh non lectus tempor a interdum justo ultricies.</p>
-                        <a href="">More</a>
-                    </div>
-                    <div class="div-blog">
-                        <img src="img/icon3.gif" height="50" width="50" alt="Portfolio">
-                        <h3> Follow me on twitter facebook & pinterest</h3>
-                        <p>Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posue re ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis. Aenean sodales nibh non lectus tempor a interdum justo ultricies.</p>
-                        <a href="">More</a>
-                    </div>
-                </section>
-                <section class="recent-works">
-                    <h3> Recent works</h3>
+                <section class="related-items">
+                    <h3> Related &nbsp; Items</h3>
                     <div class="recent-works-background"></div>
                     <div class="recent-works-container">
                         <div class="recent-works-content">
